@@ -1,3 +1,7 @@
+2008-05-15  smeghead <smeghead@users.sourceforge.jp>
+
+    * 検索条件の保存処理の作成中。cookieの読取。単一の条件の項目とキーワードに対応。
+
 2008-05-14  smeghead <smeghead@users.sourceforge.jp>
 
     * action構造体の型を他と合わせて大文字から始まるActionに変更した。
